package fr.skytryx.survivalcore.skills;

public class Enchanting extends Skills{

}
