package fr.skytryx.survivalcore.skills;

public class Excavating extends Skills{

}
