package fr.skytryx.survivalcore.skills;

public class Farming extends Skills {


}
