package fr.skytryx.survivalcore.skills;

public class Fighting extends Skills{

}
