package fr.skytryx.survivalcore.skills;

public class Fishing extends Skills{

}
