package fr.skytryx.survivalcore.skills;

public class Miner extends Skills{
}
