package fr.skytryx.survivalcore.skills;

public abstract class Skills {
    private TypeMetier typeMetier;

    public  TypeMetier getTypeMetier(){
        return typeMetier;
    }
}
