package fr.skytryx.survivalcore.skills;

public enum TypeMetier {
    MINER,
    BREWING,
    FORGING,
    ENCHANTING,
    BOW_ING,
    FIGHTING,
    FISHING,
    WOODCUTTING,
    EXCAVATING,
    FARMING
}
