package fr.skytryx.survivalcore.skills;

public class WoodCutting extends Skills{

}
