    @startuml
    'https://plantuml.com/class-diagram

    abstract class Skills{
    + abstract TypeMetier getType();
    }

    class Miner{

    }
    class Brewing{

    }
    class Forging{

    }
    class Enchanting{

    }
    class Bow-ing{

    }
    class Fighting{

    }
    class Fishing{

    }
    class WoodCutting{

    }
    class Excavating{

    }
    class Farming{

    }
    enum TypeMetier {

    }

    Miner --|> Skills
    "Bow-ing" --|> Skills
    Farming --|> Skills
    Fishing --|> Skills
    Fighting --|> Skills
    WoodCutting --|> Skills
    Enchanting --|> Skills
    Excavating --|> Skills
    Brewing --|> Skills
    Forging --|> Skills
    TypeMetier --> Skills : Type Metier
    @enduml